Versión 1.4: Cambios de diseño
Empezamos con los cambios especificados por el cliente.

--- a/css/styles.css
+++ b/css/styles.css
@@ -24,12 +24,12 @@ body {
 
 ::selection {
     color: #fff;
-    background: #CC4646;
+    background: #F50087;
 }
 
 ::-moz-selection {
     color: #fff;
-    background: #CC4646;
+    background: #F50087;
 }
 
 p {
@@ -71,7 +71,7 @@ p {
     }
 
 a {
-    color: #CC4646;
+    color: #F50087;
     text-decoration: none;
     text-shadow: none;
     -webkit-transition: all 0.2s linear;
@@ -95,7 +95,7 @@ background: #E24040;
 }
 
 .btn-primary {
-    background: #CC4646;
+    background: #F50087;
 }
 
 .form-control {
@@ -121,7 +121,7 @@ background: #E24040;
     bottom: 20px;
     right: 20px;
     z-index: 5;
-	background: #CC4646;
+	background: #F50087;
 }
 .topHome .fa-2x {
 font-size: 20px;
@@ -133,31 +133,31 @@ margin: 4px;
 .header {
     position: fixed;
     width: 100%;
-    background: #CC4646;
+    background: #F50087;
     z-index: 50;
     border-radius: 0;
     top: 0px;
-    border-bottom: 1px solid #F57676;
+    border-bottom: 1px solid #CE4676;
 }
 
 .navbar-inverse .navbar-toggle {
-    border-color: #CC4646;
-    background-color: #CC4646;
+    border-color: #F50087;
+    background-color: #F50087;
 }
 .header .navbar {
 margin: 0;
 background: transparent !important;
 }
     .navbar-inverse .navbar-toggle .icon-bar {
-        /*background-color: #CC4646;*/;
+        /*background-color: #F50087;*/;
     }
 
     .navbar-inverse .navbar-toggle:hover, .navbar-inverse .navbar-toggle:focus {
-        background: #CC4646;
+        background: #F50087;
     }
 
 .navbar-inverse .navbar-nav > li > a:hover, .navbar-inverse .navbar-nav > li > a:focus {
-    color: #CC4646;
+    color: #F50087;
 }
 
 .navbar-inverse .navbar-toggle:hover .icon-bar {
@@ -178,7 +178,7 @@ background: none;
 /*.carousel-inner*/
 #myCarousel {
     margin-top: 50px;
-    border-bottom: 4px solid #CC4646;
+    border-bottom: 4px solid #F50087;
 }
 
 .carousel-inner > .item {
@@ -210,7 +210,7 @@ background: none;
 
 .actionPanel {
     padding: 25px 0;
-    background: #CC4646;
+    background: #F50087;
 }
 
     .actionPanel h3 {
@@ -218,7 +218,7 @@ background: none;
     }
 
 .circle {
-    background: #CC4646;
+    background: #F50087;
     height: 60px;
     width: 60px;
     border-radius: 35px;
@@ -231,7 +231,7 @@ background: none;
     padding: 16px 15px;
     line-height: 18px;
     height: 50px;
-    /*color:#CC4646;*/;
+    /*color:#F50087;*/;
 }
 
 .navbar-brand b {
@@ -300,7 +300,7 @@ background: none;
     }
 
 .page-section h2 {
-    color: #CC4646;
+    color: #F50087;
 }
 
 .page-section p {
@@ -313,7 +313,7 @@ background: none;
 }
 
     .darkBg .fa {
-        color: #CC4646;
+        color: #F50087;
     }
 /*--- Banner ----*/
 .banner-container {
@@ -462,7 +462,7 @@ margin-top: 5px;
 background-color: #D6D6D6;
 }
 .progress .progress-bar {
-background-color: #CC4646;
+background-color: #F50087;
 }
 /*Skills*/
 
@@ -478,7 +478,7 @@ background-color: #CC4646;
   position: absolute;
   content: " ";
   width: 2px;
-  background-color: #CC4646;
+  background-color: #F50087;
   left: 50%;
   margin-left: -1.5px;
 }
@@ -496,7 +496,7 @@ background-color: #CC4646;
   top: 20px;
   left: 50%;
   margin-left: -25px;
-  background-color: #CC4646;
+  background-color: #F50087;
   z-index: 36;
   border-top-right-radius: 50%;
   border-top-left-radius: 50%;
@@ -521,7 +521,7 @@ display: inherit;
   top: 40px;
 }
 #timeline .timeline-badge.timeline-filter-movement a span {
-  color: #CC4646;
+  color: #F50087;
   font-size: 1.3em;
   top: -1px;
 }
@@ -534,13 +534,13 @@ display: inherit;
   margin-left: -18px;
 }
 #timeline .timeline-badge.timeline-future-movement a span {
-  color: #CC4646;
+  color: #F50087;
   font-size: .9em;
   top: 2px;
   left: 1px;
 }
 #timeline .timeline-movement {
-  border-bottom: dashed 1px #CC4646;
+  border-bottom: dashed 1px #F50087;
   position: relative;
 }
 #timeline .timeline-movement.timeline-movement-top {
@@ -627,7 +627,7 @@ display: inherit;
 .team-member .member-img img {
     max-width: 250px;
     margin: 0 auto;
-    border: 1px solid #CC4646;
+    border: 1px solid #F50087;
 }
 
 .team-member h4 {
@@ -711,12 +711,12 @@ nav#filter {
     nav#filter a {
         padding: 4px 12px;
         line-height: 20px;
-        border: 1px solid #CC4646;
+        border: 1px solid #F50087;
         text-decoration: none;
     }
 
 .current {
-    background: #CC4646;
+    background: #F50087;
     color: #fff;
 }
 
