--- a/css/styles.css
+++ b/css/styles.css
@@ -36,9 +36,11 @@ p {
     color: #858585;
 	line-height:22px;
 }
-.white{
+
+.white {
 	background:#fff;
-	}
+}
+
 .pDark p {
     color: #6D6D6D;
 }
@@ -299,9 +301,9 @@ background: none;
     line-height: 1.2em;
 }
 
-    .page-section h1 span {
-        font-weight: 200;
-    }
+.page-section h1 span {
+    font-weight: 200;
+}
 
 .page-section h2 {
     color: #6A0888;
@@ -672,18 +674,18 @@ display: inherit;
     text-align: center;
 }
 
-    .team-socials i {
-        width: 42px;
-        height: 42px;
-        line-height: 42px;
-        background: transparent;
-        border: 2px solid #E7EBEF;
-        margin: 0px 5px 0px 0px;
-        position: relative;
-        display: inline-block;
-        text-align: center;
-        font-size: 18px;
-    }
+.team-socials i {
+    width: 42px;
+    height: 42px;
+    line-height: 42px;
+    background: transparent;
+    border: 2px solid #E7EBEF;
+    margin: 0px 5px 0px 0px;
+    position: relative;
+    display: inline-block;
+    text-align: center;
+    font-size: 18px;
+}
 /* ------- */
 
 .isotopeWrapper article {
@@ -726,6 +728,43 @@ nav#filter {
 
 .portfolio-items article img {
     width: 100%;
+}
+
+ul.meta-post{
+    float:left;
+    margin: 0;
+    padding:0;
+    list-style:none;
+}
+
+ul.meta-post li{
+    /*float:left;*/
+    margin:0 10px 0 0;
+    padding:0;
+    list-style:none;
+    border-right:1px dotted #e9e9e9;
+    padding-right:10px;
+}
+
+ul.meta-post li i {
+    float:left;
+    font-size:12px;
+    margin:2px 5px 0 0;
+}
+
+ul.meta-post li a{
+    color:#999;
+    float:left;
+    font-size:12px;
+    font-weight:600;
+}
+
+.bottom-article{
+    overflow: hidden;
+    border-top:1px solid #ccc;
+    border-bottom:1px solid #ccc;
+    padding:10px 0 10px 0;
+    margin-top:20px;
 }
 
 .portfolio-item {
@@ -865,20 +904,20 @@ body {
         list-style: none;
     }
 
-        #navigation > li > a {
-            margin: 1px;
-            color: #000000;
-            background: #cccccc;
-            display: block;
-            padding: 5px;
-            text-decoration: none;
-            transition: all 400ms;
-        }
+    #navigation > li > a {
+        margin: 1px;
+        color: #000000;
+        background: #cccccc;
+        display: block;
+        padding: 5px;
+        text-decoration: none;
+        transition: all 400ms;
+    }
 
-            #navigation > li > a.current,
-            #navigation > li:hover > a {
-                background: #999999;
-            }
+    #navigation > li > a.current,
+    #navigation > li:hover > a {
+        background: #999999;
+    }
 
 .pageSection {
     min-height: 600px;
@@ -886,9 +925,9 @@ body {
     background: #dddddd;
 }
 
-    .pageSection:nth-child(odd) {
-        background: #eeeeee;
-    }
+.pageSection:nth-child(odd) {
+    background: #eeeeee;
+}
 
 .socialIcons li {
     list-style: none;
@@ -973,7 +1012,8 @@ footer {
         min-width: initial;
         margin: 0px !important;
     }
-.da-slide h2 {
+    
+    .da-slide h2 {
         font-size: 40px;
         text-align: center;
         width: initial;
@@ -997,9 +1037,9 @@ footer {
         padding: 0px;
     }
 
-        .portfolio-item .portfolio-desc .folio-info h5 {
-            font-size: 1em;
-        }
+    .portfolio-item .portfolio-desc .folio-info h5 {
+        font-size: 1em;
+    }
 
     .navbar-inverse .navbar-nav > li > a { 
         font-size: 1em;
@@ -1007,12 +1047,20 @@ footer {
         border-radius: 5px;
         margin: 19px 0px;
     }
+
 	.skilltitle {
  	text-align: left;
 	}
-	#timeline { 
+	
+    #timeline { 
 	margin:0px 12px;
 	}
+
+    .right-sidebar{
+        margin-top:30px;
+        border-left:none;
+        padding:0 0 0 0;
+    }
 }
 
 @media (max-width:760px) {
@@ -1070,6 +1118,11 @@ footer {
 
     .portfolio-item .portfolio-desc .folio-info h5 {
         font-size: 11px;
+    }
+
+    .bottom-article a.pull-right {
+        float:left;
+        margin-top:20px;
     }
 }
 
@@ -1164,3 +1217,112 @@ footer {
 .flex-caption { bottom: 35px; background-color: rgba(0, 0, 0, 0.8); color: #fff; margin: 0; padding: 25px 25px 25px 30px; position: absolute; right: 45px; width: 295px;}
 .flex-caption h3 {color: #fff; letter-spacing: 1px; margin-bottom: 8px; text-transform: uppercase;}
 .flex-caption p {margin: 0 0 15px;}
+
+
+
+.mainContent {
+    border-right:1px solid #ccc;
+
+}
+
+/* ===============================
+Aside, sidebar
+================================ */
+
+aside{
+    position:relative;
+    margin-bottom:40px;
+}
+
+.sidebar-nav{
+    float:left;
+    width:100%;
+}
+
+.right-sidebar{
+    /*border-left:1px solid #CE4676;*/
+    padding:0 0 0 30px;
+    -webkit-box-shadow:inset 1px 0 0 0 rgba(0,0,0,.01);
+    box-shadow:inset 1px 0 0 0 rgba(0,0,0,.01);
+
+}
+
+.left-sidebar{
+    border-right:1px solid #CE4676;
+    padding:0 30px 0 0;
+    -webkit-box-shadow:inset 1px 0 0 0 rgba(0,0,0,.01);
+    box-shadow:inset 1px 0 0 0 rgba(0,0,0,.01);
+    }
+
+
+.left-sidebar .widget h3, .left-sidebar .widget .widget-content{
+    padding-right:20px;
+}
+
+
+
+aside .widget {
+    margin-bottom:40px;
+}
+
+
+ul.cat, ul.recent, ul.folio-detail, ul.contact-info{
+    margin:0;
+    padding:0;
+    list-style:none;
+}
+
+ul.cat li, ul.recent li, ul.folio-detail li, ul.contact-info li{
+    margin:0 0 15px 0;
+    list-style:none;
+}
+
+ul.cat li a, ul.folio-detail li a{
+    color:#656565;
+}
+
+ul.folio-detail li label{
+    display:inline;
+    cursor:default;
+    color:#353535;
+    font-weight:bold;
+}
+
+.widget ul.recent li {
+    margin-bottom:20px;
+}
+
+ul.recent li h6 {
+    margin:0 0 10px 0;
+}
+
+ul.recent li h6 a{
+    color:#353535;
+    font-size:16px;
+    font-weight:600;
+}
+
+
+.widget ul.tags {
+    list-style:none;
+    margin:0;
+    margin-left: 0;
+    padding-left:0;
+}
+
+.widget ul.tags li {
+    margin:0 5px 15px 0;
+    display:inline-block;
+}
+
+
+.widget ul.tags li a {
+    background:#e6e6e6;
+    color:#333;
+    padding:5px 10px;
+}
+
+.widget ul.tags li a:hover {
+    text-decoration:none;
+    color:#fff;
+}
