--- a/css/styles.css
+++ b/css/styles.css
@@ -42,6 +42,38 @@ label {
     line-height:22px;
 }
 
+li.filtroAplicado {
+    color: #fff;
+    display: block;
+    width: 60%;
+    text-align: left;
+    font-size: 100%;
+    padding: 0.3em 0.7em .3em;
+    cursor: pointer;
+    white-space: nowrap;
+    overflow: hidden;
+    text-overflow: ellipsis;
+}
+
+li.filtroDisponible {
+    color: #858585;
+    cursor: pointer;
+    margin-bottom: 5px;
+}
+
+ul.cat li.filtroDisponible {
+    margin-bottom: 5px;
+}
+
+a.quitarFiltros {
+    color: #000;
+    font-size: 75%;
+}
+
+.tituloFiltros {
+    font-weight: bold;
+}
+
 .white {
 	background:#fff;
 }
